--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,28 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'style.css' %}"/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     </head>
-    <body>
-        <p>hello</p>
+    <body class="body-style">
+        <div class="container">
+            <div class="row">
+                <div class="card my-4 shadow-lg rounded">
+                    <div class="card-body">
+                        <form action="{% url 'todoapp:task' %}" class="d-flex" method="post">
+                            {% csrf_token %}
+                            <input type="text" class="form-control mx-2" name="task" placeholder="what's your task?"/>
+                            <button type="submit" class="btn btn-outline-secondary btn-sm rounded border-light" name="submit"><i class="bi bi-arrow-down"></i></button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% block tasks %}
+
+        {% endblock tasks %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     </body>
 </html>
