--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,17 @@
                 </div>
             </div>
         </div>
-        {% block tasks %}
-        {% endblock tasks %}
+        {% for task in task_list_load_on_home %}
+            <div class="container">
+                <div class="row  justify-content-center mt-3 mb-3">
+                    <div class="card col-6 d-flex shadow-lg text-align-center">
+                        <div class="card-body">
+                            <h5>{{ task }}</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     </body>
 </html>
