--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         {% for task in task_list_load_on_home %}
             <div class="container">
                 <div class="row  justify-content-center mt-3 mb-3">
-                    <div class="card col-6 d-flex shadow-lg text-align-center">
+                    <div class="card col-sm-12 col-lg-6 d-flex shadow-lg text-align-center">
                         <div class="card-body">
                             <h5>{{ task }}</h5>
                         </div>
