--- a/templates/base.html
+++ b/templates/base.html
@@ -27,8 +27,14 @@
             <div class="container">
                 <div class="row  justify-content-center mt-3 mb-3">
                     <div class="card col-sm-12 col-lg-6 d-flex shadow-lg text-align-center">
-                        <div class="card-body">
-                            <h5>{{ task }}</h5>
+                        <div class="card-body d-flex">
+                            <h5 class="">{{ task }}</h5>
+                        </div>
+                        <div class="card-footer">
+                            <form action="{% url 'todoapp:delete' task.id %}" method="post">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-outline-danger btn-sm float-end"><i class="bi bi-calendar-x"></i></button>
+                            </form>
                         </div>
                     </div>
                 </div>
