--- a/templates/base.html
+++ b/templates/base.html
@@ -23,23 +23,31 @@
                 </div>
             </div>
         </div>
-        {% for task in task_list_load_on_home %}
-            <div class="container">
-                <div class="row  justify-content-center mt-3 mb-3">
-                    <div class="card col-sm-12 col-lg-6 d-flex shadow-lg text-align-center">
-                        <div class="card-body d-flex">
-                            <h5 class="">{{ task }}</h5>
-                        </div>
-                        <div class="card-footer">
-                            <form action="{% url 'todoapp:delete' task.id %}" method="post">
-                                {% csrf_token %}
-                                <button type="submit" class="btn btn-outline-danger btn-sm float-end"><i class="bi bi-calendar-x"></i></button>
-                            </form>
+        {% block rew %}
+            {% for task in task_list_load_on_home %}
+                <div class="container">
+                    <div class="row  justify-content-center mt-3 mb-3">
+                        <div class="card col-sm-12 col-lg-6 d-flex shadow-lg text-align-center">
+                            <div class="card-body d-flex">
+                                <h5 class="">{{ task }}</h5>
+                            </div>
+                            <div class="card-footer">
+                                <div class="row float-end g-5">
+                                    <form action="{% url 'todoapp:rewrite' task.id %}" class="col-1" method="post">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-outline-warning btn-sm float-end"><i class="bi bi-pen"></i></button>
+                                    </form>
+                                    <form action="{% url 'todoapp:delete' task.id %}" class="col-1" method="post">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-outline-danger btn-sm float-end"><i class="bi bi-calendar-x"></i></button>
+                                    </form>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
+        {% endblock rew %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     </body>
 </html>
