--- a/templates/rewrite.html
+++ b/templates/rewrite.html
@@ -1,17 +1,43 @@
 {% extends 'base.html' %}
 
 {% block rew %}
-    <div class="container">
-        <div class="row  justify-content-center mt-3 mb-3">
-            <div class="card col-sm-12 col-lg-6 d-flex shadow-lg text-align-center">
-                <div class="card-body d-flex">
-                    <form action="{% url 'todoapp:rewritedone' task.id %}" class="d-flex" method="post">
-                        {% csrf_token %}
-                        <input type="text" class="form-control mx-2" name="new-name" placeholder="{{ task }}"/>
-                        <button type="submit" class="btn btn-outline-warning rounded" name="submit"><i class="bi bi-pen"></i></button>
-                    </form>
+    {% for task in tasks_list %}
+        {% if task.id == task_id %}
+            <div class="container">
+                <div class="row  justify-content-center mt-3 mb-3">
+                    <div class="card col-sm-12 col-lg-6 d-flex shadow-lg text-align-center">
+                        <div class="card-body d-flex">
+                            <form action="{% url 'todoapp:rewritedone' task.id %}" class="d-flex" method="post">
+                                {% csrf_token %}
+                                <input type="text" class="form-control mx-2" name="new-name" placeholder="{{ task }}"/>
+                                <button type="submit" class="btn btn-outline-success rounded" name="submit"><i class="bi bi-arrow-90deg-left"></i></button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
+        {% else %}
+            <div class="container">
+                <div class="row  justify-content-center mt-3 mb-3">
+                    <div class="card col-sm-12 col-lg-6 d-flex shadow-lg text-align-center">
+                        <div class="card-body d-flex">
+                            <h5 class="">{{ task }}</h5>
+                        </div>
+                        <div class="card-footer">
+                            <div class="row float-end g-5">
+                                <form action="{% url 'todoapp:rewrite' task.id %}" class="col-1" method="post">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-outline-warning btn-sm float-end"><i class="bi bi-pen"></i></button>
+                                </form>
+                                <form action="{% url 'todoapp:delete' task.id %}" class="col-1" method="post">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-outline-danger btn-sm float-end"><i class="bi bi-calendar-x"></i></button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endif %}
+    {% endfor %}
 {% endblock rew %}
