--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     </head>
     <body class="body-style">
+        <button class="btn btn-primary m-2 shadow-lg"><a href="{% url 'todoapp:logout' %}" class="logout-btn">Log Out</a></button>
         <div class="container">
             <div class="row">
                 <div class="card my-4 shadow-lg rounded">
