--- a/templates/login.html
+++ b/templates/login.html
@@ -10,14 +10,25 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     </head>
     <body class="body-style">
-        {% for message in messages %}
-            <div class="container my-1">
-                <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            </div>
-        {% endfor %}
+        {% if messages %}
+            {% for message in messages %}
+                {% if message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
+                    <div class="container my-1">
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    </div>
+                {% else %}
+                    <div class="container my-1">
+                        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        {% endif %}
         <div class="container">
             <div class="row my-5">
                 <div class="card shadow-lg rounded col-lg-6 col-md-8 col-sm-12 mx-auto">
@@ -29,37 +40,19 @@
                             <form action="" method="post">
                                 {% csrf_token %}
                                 <div class="mb-3">
-                                    {{ form.username }}
+                                    <input type="text" name="uname" class="form-control" placeholder="Username..." />
                                 </div>
                                 <div class="mb-3">
-                                    {{ form.email }}
+                                    <input type="password" name="passwd" class="form-control" placeholder="Password..." />
                                 </div>
-                                    <div class="mb-3">
-                                    {{ form.password1 }}
-                                </div>
-                                <div class="mb-3">
-                                    {{ form.password2 }}
-                                </div>
-                                
-                                <input type="submit" class="btn btn-success rounded" value="Sign Up" name="create-user"/>
+                                <input type="submit" class="btn btn-success rounded" value="Log In" name="loginuser"/>
                             </form>
-                            <p class="text-center">Already have an account?  <a href="{% url 'todoapp:login' %}">Login</a></p>
+                            <p class="text-center">Don't have an account yet?  <a href="{% url 'todoapp:register' %}">Register</a></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    <script>
-        var forms_list = document.getElementsByTagName('input')
-        forms_list[1].placeholder = 'Username...';
-        forms_list[2].placeholder = 'Email...';
-        forms_list[3].placeholder = 'Password...';
-        forms_list[4].placeholder = 'Re-enter password...';
-
-        for(i = 1; i<=4; i++){
-            forms_list[i].classList.add("form-control")
-        }
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     </body>
 </html>
