Reset password option

--- a/static/style.css
+++ b/static/style.css
@@ -12,3 +12,9 @@
     text-decoration: none !important; 
     color: white !important; 
 }
+
+.nav-styling:hover{
+    text-decoration: none !important;
+    color: white !important;
+    background-color: blue !important;
+}
