--- a/templates/base.html
+++ b/templates/base.html
@@ -10,14 +10,40 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     </head>
     <body class="body-style">
-        <button class="btn btn-primary m-2 shadow-lg"><a href="{% url 'todoapp:logout' %}" class="logout-btn">Log Out</a></button>
+        <ul class="nav justify-content-around bg-light p-3 shadow-lg">
+            <li class="nav-item">
+                <a class="nav-link active border border-primary rounded nav-styling" href="{% url 'todoapp:logout' %}">Log Out</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link  active border border-primary rounded nav-styling" href="{% url 'todoapp:passwdreset' %}">Reset Password</a>
+            </li>
+        </ul>
+        {% if messages %}
+            {% for message in messages %}
+                {% if message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
+                    <div class="container my-1">
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    </div>
+                {% else %}
+                    <div class="container my-1">
+                        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        {% endif %}
         <div class="container">
             <div class="row">
                 <div class="card my-4 shadow-lg rounded">
                     <div class="card-body">
                         <form action="{% url 'todoapp:task' %}" class="d-flex" method="post">
                             {% csrf_token %}
-                            <input type="text" class="form-control mx-2" name="task" placeholder="what's your task?"/>
+                            <input type="text" class="form-control mx-2" name="task" placeholder="what's on your mind?"/>
                             <button type="submit" class="btn btn-outline-secondary btn-sm rounded border-light" name="submit"><i class="bi bi-arrow-down"></i></button>
                         </form>
                     </div>
@@ -49,6 +75,7 @@
                 </div>
             {% endfor %}
         {% endblock rew %}
+        {{ time }}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     </body>
 </html>
