--- a/static/style.css
+++ b/static/style.css
@@ -18,3 +18,10 @@
     color: white !important;
     background-color: blue !important;
 }
+
+.unselectable{
+    user-select: none !important;
+    -moz-user-select: none !important;
+    -webkit-user-select: none !important;
+    -ms-user-select: none !important;
+}
