--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,9 @@
                 <a class="nav-link active border border-primary rounded nav-styling" href="{% url 'todoapp:logout' %}">Log Out</a>
             </li>
             <li class="nav-item">
+                <h4 class="nav-link unselectable">{{ current_date }}</h4>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link  active border border-primary rounded nav-styling" href="{% url 'todoapp:passwdreset' %}">Reset Password</a>
             </li>
         </ul>
@@ -75,7 +78,6 @@
                 </div>
             {% endfor %}
         {% endblock rew %}
-        {{ time }}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     </body>
 </html>
