--- a/templates/password_verfication.html
+++ b/templates/password_verfication.html
@@ -33,23 +33,25 @@
             <div class="row my-5">
                 <div class="card shadow-lg rounded col-lg-6 col-md-8 col-sm-12 mx-auto">
                     <div class="card-header">
-                        <h1 class="text-center text-success">Log In</h1>
+                        <h1 class="text-center text-success">Confirmation</h1>
                     </div>
                     <div class="card-body">
                         <div class="container">
                             <form action="" method="post">
                                 {% csrf_token %}
                                 <div class="mb-3">
-                                    <input type="text" name="uname" class="form-control" placeholder="Username..." />
+                                    <input type="text" name="code" class="form-control" placeholder="Confirmation code..." />
                                 </div>
-                                <div class="mb-3">
-                                    <input type="password" name="passwd" class="form-control" placeholder="Password..." />
-                                </div>
-                                <input type="submit" class="btn btn-success rounded" value="Log In" name="loginuser"/>
+                                <input type="submit" class="btn btn-outline-success rounded" value="Confirm" name="confirm"/>
                             </form>
-                            <p class="text-center">Don't have an account yet?  <a href="{% url 'todoapp:register' %}">Register</a></p>
-                            <p class="text-center"><a href="{% url 'todoapp:passwdforgot' %}">Forgot your password?</a></p>
                         </div>
+                    </div>
+                    <div class="card-footer">
+                        {% if "mail" not in mail_host %}
+                            <p class="text-center">We have sent confirmation code on your {{ mail_host }} mail, if it doesn't arrive in 5 minutes check your spam folder or <a href="{% url 'todoapp:forgotpasswdresend' %}">request another</a></p>
+                        {% else %}
+                            <p class="text-center">We have sent confirmation code on your {{ mail_host }} account, if it doesn't arrive in 5 minutes check your spam folder <a href="{% url 'todoapp:forgotpasswdresend' %}">request another</a></p>
+                        {% endif %}
                     </div>
                 </div>
             </div>
